refactor: apply language migration aid